--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
   }
   button:nth-last-child(2),
   button:nth-last-child(1) {
-    background: tomato;
+    background: rgb(127, 59, 255);
     color: white;
   }
   
